[metadata]
name = pmeter
version = 0.0.0
description = An open-source tool to measure the network experiences of the host.
long_description = file: README.md
author = Loggers a team for CSE 603 at UB
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   docopt
   psutil
   tcp-latency
   ipping
   pyping
   py-cpuinfo
   pythonping
   py3-validate-email
   
[options.packages.find]
where=src